--- a/public/style.css
+++ b/public/style.css
@@ -155,3 +155,33 @@ td a:hover {
         transform: rotate(360deg);
     }
 }
+
+/* Style for the filter button */
+#filterButton {
+    background-color: #011e3b;
+        color: #fff;
+        padding: 4px 8px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        text-decoration: none;
+        transition: background-color 0.3s;
+        display: inline-block;
+        width: 100px;
+        text-align: center;
+    }
+    /* Adjust the margin as needed */
+
+#filterButton:hover {
+    background-color: #2980b9;
+}
+
+.dropdown {
+    margin: auto;
+
+    margin-left: auto;
+
+    margin-left: 62em;
+
+}
+
